--- a/css/blog.css
+++ b/css/blog.css
@@ -1,9 +1,25 @@
 header {
-    background-image: url(/img/3_2.jpg);
+    background-image: url(/img/4.jpg);
     background-repeat: no-repeat;
     background-position-x: center;
     height: 400px;
     background-size: cover;
+    font-family: 'Livvic';
+}
+
+body {
+    background-color: white;
+    background-position: center;
+    height: auto;
+    font-family: 'Livvic';
+}
+
+.body.a {
+    font-family: 'Livvic-regular', sans-serif;
+    font-size: 15px;
+    font-weight: 500;
+    color: #0a0a0a;
+    display: block;
 }
 
 footer {
@@ -12,51 +28,25 @@ footer {
     background-position-x: center;
     height: 400px;
     background-size: cover;
+    padding: 50px;
 }
 
-.card2 {
-    background-image: url(/img/3_2.jpg);
-    width: 100%;
-    height: 100%;
-    align-self: center;
-    background-repeat: no-repeat;
-    text-align: center;
-    background-size: 100%;
+.footer .footer-top {
+    padding: 92px 0 0 100px;
 }
 
-.card3 {
-    background-image: url(/img/footer-bg.png);
-    width: auto;
-    min-width: 200px;
-    height: 100%;
-    align-self: center;
-    background-repeat: no-repeat;
-    text-align: center;
-    background-size: 100%;
+.footer.p {
+    font-family: 'Livvic-light', sans-serif;
+    font-size: 10px;
 }
 
-.heading-content {
-    top: 100%;
-    width: 100%;
-    max-width: 100%;
-    align-self: center;
+.footer.a {
+    font-family: 'Livvic-light';
 }
 
-.heading-content h5 {
-    font-family: 'Livvic-semibold', sans-serif;
-    font-size: 2em;
-    font-weight: 500;
-    color: white;
-    letter-spacing: 2px;
-}
-
-.heading-content p {
-    font-family: 'Livvic-light', sans-serifs;
-    font-size: 1em;
-    font-weight: lighter;
-    color: white;
-    word-spacing: 5px;
-    letter-spacing: 2px;
+.footer.h5 {
+    font-family: 'Livvic-bold';
+    font-weight: 600;
 }
 
 @font-face {
@@ -105,6 +95,7 @@ footer {
     font-family: 'Livvic-light';
     src: url(/font/Livvic/Livvic-Light.ttf);
     font-weight: 400px;
+    font-size: 16px;
 }
 
 @font-face {
@@ -177,32 +168,17 @@ footer {
     background-color: #f6f7f9 !important;
 }
 
-.d8 {
-    font-size: calc(0.9rem + 0.2vw);
-    font-weight: 15;
-    line-height: 1.0;
+hr1 {
+    color: blue;
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 1px;
 }
 
-.card {
-    background-color: #1b47ad;
-    /* Chrome 10-25, Safari 5.1-6 */
-    background-image: -webkit-linear-gradient(to right, rgba(13, 48, 129), rgba(69, 135, 226, 1));
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background-image: linear-gradient(to right, rgb(13, 48, 129), rgba(69, 135, 226, 1));
-}
-
-.card1 {
-    background-color: white;
-    width: auto;
-    height: auto;
-}
-
-.iconic {
-    max-height: 2rem;
-    max-width: 2rem;
-}
-
-.text-gradiental {
-    text-decoration-color: -webkit-linear-gradient(to right, rgba(13, 48, 129), rgba(69, 135, 226, 1));
-    ;
+.rounded-square {
+    border-radius: 1rem !important;
 }
