Blog details page added
Blog details page added. Footer and heder part improved.

--- a/css/blog.css
+++ b/css/blog.css
@@ -5,14 +5,14 @@ header {
     background-position-y: top;
     height: 400px;
     background-size: cover;
-    font-family: 'Livvic';
+    font-family: 'Livvic-regular';
 }
 
 body {
     background-color: white;
     background-position: center;
     height: auto;
-    font-family: 'Livvic';
+    font-family: 'Livvic-regular';
 }
 
 .body.a {
@@ -21,16 +21,6 @@ body {
     font-weight: 500;
     color: #0a0a0a;
     display: block;
-}
-
-footer {
-    background-image: url(/img/footer-bg.png);
-    background-repeat: no-repeat;
-    background-position-x: center;
-    background-position-y: 10%;
-    height: 400px;
-    background-size: cover;
-    padding: 50px;
 }
 
 .footer .footer-top {
