--- a/css/contact.css
+++ b/css/contact.css
@@ -148,6 +148,7 @@ header {
 }
 
 .btn-gradiental {
+    border: 0;
     /* fallback for old browsers */
     background-color: #1b47ad;
     /* Chrome 10-25, Safari 5.1-6 */
@@ -157,6 +158,7 @@ header {
 }
 
 .btn-gradiental:hover {
+    border: 0;
     /* fallback for old browsers */
     background-color: #1b47ad;
     /* Chrome 10-25, Safari 5.1-6 */
@@ -176,6 +178,7 @@ header {
 }
 
 .card {
+    border: 0;
     background-color: #1b47ad;
     /* Chrome 10-25, Safari 5.1-6 */
     background-image: -webkit-linear-gradient(to right, rgba(13, 48, 129), rgba(69, 135, 226, 1));
@@ -184,6 +187,7 @@ header {
 }
 
 .card1 {
+    border: 0;
     background-color: white;
     width: auto;
     height: auto;
@@ -197,4 +201,27 @@ header {
 .text-gradiental {
     text-decoration-color: -webkit-linear-gradient(to right, rgba(13, 48, 129), rgba(69, 135, 226, 1));
     ;
+}
+
+.form-control {
+    border: 0;
+    margin-bottom: 2px;
+    padding-bottom: 5px;
+    border-radius: 0.2rem;
+    position: relative;
+}
+
+.form-control small {
+    color: red;
+    visibility: hidden;
+}
+
+.form-control input {
+    background-color: #f6f7f9;
+    border: 2px solid #f0f0f000;
+    border-radius: 4px;
+    display: block;
+    font-family: inherit;
+    padding: 15px;
+    width: 100%;
 }
