--- a/css/main.css
+++ b/css/main.css
@@ -236,3 +236,19 @@ ul.sub-menu li {
 .topbar-area .logo-part .light {
     display: inherit;
 }
+
+.rs-login {
+    background-color: white;
+    border: 1px solid rgba(54, 54, 54, 0.1);
+    border-radius: 0.3rem;
+    padding: 2rem 1rem;
+}
+
+.rs-login .form-control input {
+    width: 100%;
+    margin: 0;
+    outline: 0;
+    line-height: normal;
+    border: 1px solid rgba(54, 54, 54, 0.1);
+    height: 45px;
+}
